--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -16,7 +16,7 @@
                 <p>Are you sure you want to log out?</p>
 
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Account/Login", new { area = "Identity" })" method="post">
-                    <button type="submit" class="btn btn-danger">Yes, log me out</button>
+                    <button type="submit" class="btn btn-danger shadow-none ">Yes, log me out</button>
                 </form>
 
             }
