--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Registration</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Student</a>
                             </li>
                         }
                         @if (User.IsInRole("Admin"))
