--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
                   asp-page="/Account/Logout"
                   method="get"
                   class="form-inline">
-                <button type="submit" class="nav-link btn btn-link text-dark border-0">
+                <button type="submit" class="nav-link btn btn-link text-dark shadow-none">
                     Logout
                 </button>
             </form>
