--- a/Views/Students/Edit.cshtml
+++ b/Views/Students/Edit.cshtml
@@ -117,7 +117,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class=" mt-3">
-                <input type="submit" value="Update" class="btn btn-primary w-100" />
+                <input type="submit" value="Update" class="btn btn-primary shadow-none w-100" />
             </div>
         </form>
     </div>
