--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div class="mb-3">
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary shadow-none ">Log in</button>
                 </div>
                 <div class="mb-3">
                     <p>
