--- a/Views/Enquiry/Enquiry_List.cshtml
+++ b/Views/Enquiry/Enquiry_List.cshtml
@@ -11,7 +11,7 @@
 <hr />
 
 <p>
-    <a asp-action="Index" class="btn btn-primary btn-sm">Enquiry Form</a>
+    <a asp-action="Index" class="btn btn-primary btn-sm shadow-none ">Enquiry Form</a>
 </p>
 
 
