--- a/Views/Shared/List_Attendance.cshtml
+++ b/Views/Shared/List_Attendance.cshtml
@@ -3,8 +3,14 @@
     ViewBag.Title = "Student Attendance List";
 }
 
+<div class="d-flex justify-content-between">
+    <h4>@ViewBag.heading</h4>
+    <span>
+        <a asp-action="Attendance" class="btn btn-sm btn-primary shadow-none ">Back</a>
+    </span>
+</div>
 
-<h4>Attendance Record</h4>
+
 <hr />
 
 <table class="table table-bordered table-hover table-striped shadow ">
