--- a/Views/Students/List_Seat.cshtml
+++ b/Views/Students/List_Seat.cshtml
@@ -9,12 +9,12 @@
 <div class="d-flex gap-2 mb-2">
 <p>
     <form asp-action="Create_Seat" method="post">
-        <button type="submit" class="btn btn-primary btn-sm">+ Seat</button>
+            <button type="submit" class="btn btn-primary btn-sm shadow-none ">+ Seat</button>
     </form>
 </p>
 <p>
     <form asp-action="Delete_Seat" method="post">
-        <button type="submit" class="btn btn-danger btn-sm">- Seat</button>
+            <button type="submit" class="btn btn-danger btn-sm shadow-none ">- Seat</button>
     </form>
 </p>
 </div>
